css/queries.css
/* ----- Big tablet to 1200px (widths smaller than 1140px row) ----- */
@media only screen and (max-width: 1200px) {
  .row {
    padding: 0 3%;
  }

  /* Title */
  .hero-text-box {
    right: 20px;
    background-color: #fff;
  }

  /* Project */
  .project .icons {
    margin: 10px 0;
  }
  
  .project .icon-big {
    font-size: 300%;
    margin: 8px 5px;
  }

  .redux {
    height: 50px;
    width: 50px;
  }
}

/* ----- Small tablet to big tablet: from 768px to 1023px ----- */
@media only screen and (max-width: 1023px) {
  body {
    font-size: 18px;
  }

  section {
    padding: 60px 0;
  }

  .btn:link,
  .btn:visited,
  input[type=submit] {
    padding: 10px 15px;
  }

  /* Project */
  .project .icons {
    margin: 10px 0;
  }
  
  .project .icon-big {
    font-size: 300%;
    margin: 8px 5px;
  }

  .icon-medium {
    font-size: 200%;
  }
}

/* ----- Small phones to small tablets: from  481px to 767px ----- */
@media only screen and (max-width: 767px) {
.row {
    padding: 0 5%;
  }

  .span-1-of-2,
  .span-2-of-3 {
    margin: 15px 0;
    width: 100%;
  }

  .span-2-of-3 {
    margin-top: 5px;
    margin-bottom: 20px;
  }

  section {
    padding: 40px 0;
  }

  h1 {
    font-size: 200%;
  }

  h2 {
    margin-bottom: 30px;
  }

  p {
    font-size: 105%;
  }

  .small-text {
    margin-left: 5%;
    font-size: 95%;
  }

  .btn:link,
  .btn:visited,
  input[type=submit] {
    padding: 5px 8px;
    margin-top: 10px;
  }

  /* Header */
  .main-nav {
    float: left;
    margin-top: 17px;
    margin-left: 25px;
    display: none; /* start at none, will show when clicked */
  }

  .main-nav li {
    display: block;
  }

  .main-nav li a:link,
  .main-nav li a:visited {
    display: block;
    border: 0;
    padding-bottom: 5px;
  }

  .nav-icon {
    display: inline-block;
  }

  /* Title */
  .hero-text-box {
    bottom: 25px;
    right: 25px;
    width: 250px;
    height: 100px;
    background-color: #fff;
  }

  /* About */
  .about h2 {
    margin-top: 30px;
  }

  /* Project */
  .project {
    margin-bottom: 30px;
    text-align: center;
  }

  .project .icons {
    margin: 10px auto;
    max-width: 350px;
  }
  
  .project .icon-big {
    font-size: 250%;
    margin: 8px 5px;
  }

  .redux {
    height: 40px;
    width: 40px;
  }

  /* Contact */
  .clear-space {
    width: 0%;
  }

  /* Footer */
  footer {
    padding: 50px 0;
  }

  .icon-margin {
    margin-left: 5%;
    margin-right: 5%;
  }
}

/* ----- Small phones: from 0 to 480px ----- */
@media only screen and (max-width: 480px) {
  section {
    padding: 30px 0;
  }

  /* Title */
  .hero-text-box {
    bottom: 100px;
    right: 25px;
    width: 250px;
    height: 100px;
    background-color: #fff;
  }

  /* Project */
  .project .icons {
    margin: 15px 0;
  }

  .project .icon-big {
    font-size: 200%;
    margin: 0 5px;
  }

  /* Footer */
  footer {
    padding: 30px 0;
  }
}

